--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-
-$ goinstall github.com/JLarky/cgo_example
-$ cd using_package
-$ ./using
-Hello, 世界 1804289383
+$ make main
+$ ./main 
+hello, world
